--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,308 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.logo{
+  height: 15vh;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.navbar{
+  height: 7vh;
+  display: flex;
+  background-color: black;
+  color: white;
+  gap: 60px;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
+}
+
+@media (min-width: 481px) and (max-width:767px){
+  .navbar{
+    width: 100vh;
+    font-size: small;
+  } .logo{
+    height: 70px;
+  } .title{
+    margin-left: 30%;
+    width: 30px;
+  }
+   .title h1{
+    font-size: 30px;
+    align-items: center;
+  } 
+}
+
+.about-container{
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  grid-template-rows: repeat(2, 0.5fr);
+  gap:10px;
+}
+
+.main-section{
+  grid-column: 2;
+  grid-row: 1 ;
+}
+
+
+.main-text{
+  grid-column: 1;
+  grid-row: 1;
+  width: 50vh;
+  margin-top: 15%;
+  margin-left: 30%;
+  font-size: 20px;
+  text-align:left
+}
+
+
+@media (min-width: 481px) and (max-width:767px) {
+  .container-hero{
+    width: 90vh;
+    margin-left: 30px;
+  } .hero-section{
+    align-items: center;
+  } .moving-pic{
+    width: 40vh;
+    align-items: center;
+  } .our-service{
+    margin-left: 60%;
+    border: 0 solid;
+    box-shadow: none;
+  } .container-service{
+    width: 100vh;
+  } .profesional {
+    width: 90vh;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@media (min-width: 481px) and (max-width:767px){
+  .testimonial{
+   width: 60vh;
+  }
 }
+
+.title{
+  display: flex;
+  text-align: center;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.container-hero{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-section{
+  padding: 10px;
+  text-align: center;
+  width: 60vw ;
+}
+
+.container-service{
+  margin-top: 6vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.profesional{
+  height: 40vh;
+  width: 50%;
+}
+
+
+.our-service{
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.our-service h1{
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.testimonial-container{
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+.card-top{
+  width: 30vh;
+  height: 40vh;
+}
+
+.card-top img{
+  height: 30vh;
+}
+
+.card-bottom{
+  width: 40vh;
+  text-align: center;
+}
+
+.footer{
+  background-color: black;
+  color: white;
+  height: 10vh;
+}
+
+
+
+.about-container img{
+  height: 40vh;
+  margin-top: 10vh;
+}
+
+.service-container{
+  margin-top: 50px;
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  width: 100%;
+}
+
+.service-container img{
+  height: 40vh;
+}
+
+.btn-menu{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.btn1{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-radius: 20px;
+  background-color: rgb(86, 205, 86);
+  text-align: center;
+  padding-top: 15px;
+  color: white;
+  width: 20vh;
+  height: 8vh;
+}
+
+.btn2{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-radius: 20px;
+  background-color: rgb(26, 101, 151);
+  text-align: center;
+  padding-top: 15px;
+  color: white;
+  width: 20vh;
+  height: 8vh;
+}
+
+.wa{
+  height: 30px;
+}
+
+.testimonial-container{
+  margin-bottom: 20px;
+}
+
+.team-container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-left: 50%;
+  
+}
+
+.team-1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 45vh;
+  width: fit-content;
+  margin-top: 20px;
+}
+
+.team-1 img{
+  height: 190px;
+  width: 155px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.work-cultute{
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap:10px;
+}
+
+.culture-img img{
+  height: 20vh;
+}
+
+.teams-container{
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+}
+
+.team-close{
+  display: flex;
+  gap: 20px;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team-culture{
+  height: 50vh;
+}
+
+.team-clt{
+  height: 20%;
+  width: 50%;
+}
+
